# matrix

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Errors.h  Matrix.h  main.cpp  test_main.cpp
